--- a/meetings/13-spatial.qmd
+++ b/meetings/13-spatial.qmd
@@ -3,17 +3,41 @@ title: "Week 13: Spatial analysis"
 ---
 
 
-
 ## Reading
-- Robin Lovelace, Jakub Nowosad, and Jannes Muenchow, [*Geocomputation with R*](https://geocompr.robinlovelace.net) (2nd Edition)
+- Robin Lovelace, Jakub Nowosad, and Jannes Muenchow, [*Geocomputation with R*](https://geocompr.robinlovelace.net) (2nd Edition), Chapters 1, 2, 7, and 9.
+- Kieran Healy, *Data Visualization: A Practical Introduction* (Princeton University Press, 2018), [Chapter 7: Draw Maps](https://socviz.co/maps.html#maps).
+- Leonardo Barleta, "Spatial Genealogies: Mobility, Settlement, and Empire-Building in the Brazilian Backlands, 1650–1800," *Journal of Social History* 54, no. 4 (2021): 1064–90, <http://dx.doi.org/10.1093/jsh/shab006>.
 
 ## Assignment
-
+- Browse one of the spatial Digital History projects listed under Resources or find one relevant to your field.
 
 ## Activities
-
+- Discussion of the use of spatial analysis in history.
+- Workshop: Spatial analysis.
 
 ## Resources
+
+### Spatial Digital History projects
+- Scott Nesbit and Ed Ayers, [Visualizing Emancipation](https://dsl.richmond.edu/emancipation/)
+- [Slave Voyages](https://www.slavevoyages.org/)
+- [Mapping the Republic of Letters](http://republicofletters.stanford.edu)
+- [Pleiades: gazetteer and graph of ancient places](https://pleiades.stoa.org)
+- [Ancient World Mapping Center](http://awmc.unc.edu)
+- [World Historical Gazetteer](https://whgazetteer.org/)
+
+### GIS with R
 - Robin Lovelace, Jakub Nowosad, and Jannes Muenchow, [*Geocomputation with R*](https://geocompr.robinlovelace.net) (2nd Edition)
 - Edzer Pebesma and Roger Bivand, [*Spatial Data Science: With Applications in R*](https://r-spatial.org/book/)
-- [sf package](https://r-spatial.github.io/sf/)
+- Jesse Sadler, [An Exploration of Simple Features for R](https://www.jessesadler.com/post/simple-feature-objects/).
+
+### GIS R packages
+- [CRAN Task View: Analysis of Spatial Data](https://cran.r-project.org/web/views/Spatial.html)
+- [sf](https://r-spatial.github.io/sf/): Vector data
+- [terra](https://rspatial.org): Raster data
+- [tmap](https://r-tmap.github.io/tmap/): An alternative to making maps with ggplot2.
+- [leaflet](https://rstudio.github.io/leaflet/): Interactive mapping with R.
+- [rayshader](https://www.rayshader.com): Make 3d maps in R.
+- [rnaturalearth](https://docs.ropensci.org/rnaturalearth/)
+- [tidycensus](https://walker-data.com/tidycensus/) provides access to US Census Bureau data in a tidy format, including the option to bind the data spatially on import.
+- [tigris](https://github.com/walkerke/tigris) provides access to cartographic elements provided by the US Census Bureau TIGER, including cartographic boundaries, roads, and water.
+- [opencage](https://docs.ropensci.org/opencage/): Geocode using the [Opencage](https://opencagedata.com/) API.
