--- a/meetings/15-conclusion.qmd
+++ b/meetings/15-conclusion.qmd
@@ -2,15 +2,4 @@
 title: "Week 15: Conclusion"
 ---
 
-
-
-## Reading
-
-
-## Assignment
-
-
-## Activities
-
-
-## Resources
+Presentation of website projects.
